--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
 project (ROBJECT)
 
+INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/contrib")
+
+add_subdirectory (contrib)
 add_subdirectory (robject)
 include_directories(${ROBJECT_SOURCE_DIR}/robject)
-
-add_subdirectory (rtest)
-include_directories(${ROBJECT_SOURCE_DIR}/rtest)
 
 add_subdirectory (test)
